src/components/Insight/Insights.css
/* ... */
@media (min-width: 601px) and (max-width: 767px) {
    .insight-background {
        width: 100%;
        height: 50%;
        max-width: 100%;
        height: auto;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        box-sizing: border-box; 
overflow-x: hidden; 
            padding: 120px 20px 119.02px 2px;

    }

.insight-card{
    width: 100%;
height: auto;
top: 120px;
left: 513px;
gap: 0px;
 opacity: 1;
display: flex;
justify-content: center;


}
    
    .frame{
        margin-top: 30px;
        }
        .text-box-person-one{
            margin-top: 50px;
        }  
        .text-box-person-one{
            margin-top: 50px;
        
        }  


}
@media (min-width: 768px) and (max-width: 911px) {
    .insight-background {
        width: 100%;
        height: 50%;
        max-width: 100%;
        height: auto;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        box-sizing: border-box; 
overflow-x: hidden; 
            padding: 120px 20px 119.02px 2px;

    }

.insight-card{
    width: 100%;
height: auto;
top: 120px;
left: 513px;
gap: 0px;
 opacity: 1;
display: flex;
justify-content: center;


}
    
    .frame{
        margin-top: 30px;
        }
        .text-box-person-one{
            margin-top: 50px;
        }  
        .text-box-person-one{
            margin-top: 50px;
        
        }  



}
/* ... */

